<resources>
    <string name="app_name">COOKING RECIPE</string>
    <string name="apiKey">0df4a0abda4d414d9879282d53459857</string>

    <string name="app_name_f2">CHAT APP</string>
    <string name="welcome_back">WELCOME</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="add_image">Add_Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="selector_user">Selector User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>

    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
    <string-array name="tags_display">
        <item>Main Course</item>
        <item>Side Dish</item>
        <item>Dessert</item>
        <item>Appetizer</item>
        <item>Salad</item>
        <item>Bread</item>
        <item>Breakfast</item>
        <item>Soup</item>
        <item>Beverage</item>
        <item>Sauce</item>
        <item>Marinade</item>
        <item>Fingerfood</item>
        <item>Snack</item>
        <item>Drink</item>
    </string-array>
</resources>